<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E9E9E9">


    <!-- Create Information Label -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/main_info3"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/main_info4"
        android:textStyle="bold"
        android:layout_marginTop="90dp"
        android:textSize="15sp"
        android:textColor="#000000"/>

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="317dp"
        android:src="@drawable/ani_background2"/>

    <!-- Create Button Refresh -->
    <Button
        android:id="@+id/bt_refresh"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="412dp"
        android:layout_marginLeft="200dp"
        android:text="@string/refresh_btn"
        android:textColor="#000000"
        android:background="#FAF6F6"/>

</RelativeLayout>