<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ahulproject.webnime.otakuanime.MainMenu"
    android:orientation="vertical"
    android:background="@drawable/img_background3"
    android:weightSum="10"
    android:gravity="center_horizontal">

    <RelativeLayout
        android:layout_weight="1.6"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <!-- Create Information Label -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:text="@string/main_info1"
            android:textColor="#fff"
            android:textSize="40sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_info2"
            android:textStyle="bold"
            android:layout_marginTop="95dp"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textColor="#fff"
            />

    </RelativeLayout>

    <GridLayout
        android:columnCount="2"
        android:rowCount="2"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:layout_weight="8"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="14dp">

        <!-- Anoboy Card View -->
        <!-- Row 1, Column 1 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/anoboy_url"
            app:cardBackgroundColor="#8A000000"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="0dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="15dp">

        <RelativeLayout
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/anoboy"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="90dp"/>
            <TextView
                android:text="@string/anoboy_web"
                android:layout_gravity="center_horizontal"
                android:textColor="#ffff"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginTop="100dp"
                android:layout_marginStart="39dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <!-- Samehadaku Card View -->
        <!-- Row 1, Column 2 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/samehadaku_url"
            app:cardBackgroundColor="#8A000000"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="15dp">



            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/samehadaku"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"/>

                <TextView
                    android:text="@string/samehadaku_web"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ffff"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Gomunime Card View -->
        <!-- Row 2, Column 1 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/gomunime_url"
            app:cardBackgroundColor="#8A000000"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="0dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/gomunime"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/gomunime_web"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#ffff"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- History Card View -->
        <!-- Row 2, Column 2 -->
        <androidx.cardview.widget.CardView
            android:id="@+id/History_nav"
            app:cardBackgroundColor="#8A000000"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:src="@drawable/img_setting_ani"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="60dp"
                    android:layout_height="60dp"/>

                <TextView
                    android:text="@string/settings_bar"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:textColor="#ffff"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>

    <!-- Version App
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:textColor="#ffff"
            android:text="@string/version_app"
            android:textStyle="bold"
            android:textSize="12sp"/>
    </LinearLayout>
    -->

</LinearLayout>